# qemu_web

./: .gitignore  LICENSE  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  utils.py
.github/workflows/: node.js.yml  webpack.yml
.postman/: api  api_cf60ccff-def5-48d9-b031-f8bcd4045d97
frontend/src/: App.js
frontend/src/components/: Login.js  VMDetails.js  VMList.js
src/: index.js
src/components/: DiskManagement.jsx  Login.jsx  Settings.jsx  XMLEditor.jsx  comp.css
web/: cli.py  snapshot.py
web/app/: .env  __init__.py  init_db.py  init_db.sql  models.py  routes.py  socketio_events.py  version.py
web/app/ui/: asset-manifest.json  index.html
web/frontend/: package.json  web.ini
web/frontend/public/: index.html
web/frontend/src/: App.js  comp.css  index.css  index.js  main.py
web/frontend/src/components/: BackupScheduler.jsx  DiskUsage.jsx  Login.js  Login.jsx  PCIDeviceManager.jsx  RemoteConsole.jsx  Scheduler.js  Settings.jsx  SnapshotManager.jsx  VMDetails.js  VMList.js  VMSnapshots.js  VMStats.jsx  VirtualMachineManager.jsx  XMLEditor.jsx  back.css  comp.css  disk.css  login.css  pci.css  remote.css  settings.css  snapshot.css  stats.css  vmm.css  xmle.css
web/frontend/src/dev/: previews.jsx
web/myproject/: __init__.py  back.py  flask_ini.sh  main.py  myproject.ini  myproject.py  sock_srv.py  stats_update.py
web/myproject/ui/: New Collection.json  index.html
